spacing and fix button corners

--- a/app/design/frontend/Infortis/odbp/web/css/odbp-migration.css
+++ b/app/design/frontend/Infortis/odbp/web/css/odbp-migration.css
@@ -1317,7 +1317,9 @@ button[title*='Place Order']:hover {
 
 /*migration changes when admin fails*/
 div.price-box .price {color:#a04c41;}
+
 div.price-box .old-price .price {color: #bbb;}
+
 .sticker-wrapper .sticker.new, .sticker-wrapper .sticker.sale, .sticker-wrapper .sticker.custom {
   background-color:rgba(248, 53, 0, .95);
   font-size: 20px;
@@ -1337,4 +1339,7 @@ div.price-box .old-price .price {color: #bbb;}
   -webkit-transform: rotate(-10deg);
   -ms-transform: rotate(-10deg);
 }
+
 #cryozonic_stripe_cc_cid_div {margin-bottom: 0}
+
+button[type="submit"], button.action {border-radius:4px;}
